# DualCare

DualCare-main zip (3)FFF/DualCare-main zip (2)/DualCare-main/: README.md
DualCare-main zip (3)FFF/DualCare-main zip (2)/DualCare-main/app/: README.md  pyproject.toml  run-app.bat  run_app.py
DualCare-main zip (3)FFF/DualCare-main zip (2)/DualCare-main/app/src/: database.py  engine.py  main.py  main.py.bak  models.py
DualCare-main zip (3)FFF/DualCare-main zip (2)/DualCare-main/esp32_belt/: config.h  esp32_belt.ino
DualCare-main zip (3)FFF/DualCare-main zip (2)/DualCare-main/esp32_wrist/: config.h  esp32_wrist.ino
DualCare-main zip (3)FFF/DualCare-main zip (2)/android-app/: README.md  build.gradle  settings.gradle
DualCare-main zip (3)FFF/DualCare-main zip (2)/android-app/app/: build.gradle  google-services.json
DualCare-main zip (3)FFF/DualCare-main zip (2)/android-app/app/src/main/: AndroidManifest.xml
DualCare-main zip (3)FFF/DualCare-main zip (2)/android-app/app/src/main/java/com/dualcare/app/: MainActivity.kt
DualCare-main zip (3)FFF/DualCare-main zip (2)/android-app/app/src/main/res/layout/: activity_main.xml
DualCare-main zip (3)FFF/DualCare-main zip (2)/android-app/app/src/main/res/values/: strings.xml
