[project]
name = "dualcare"
version = "1.0.0"
description = "DualCare — Maternal & Fetal Health Monitoring Platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "J. Adly", email = "youssefadly237@gmail.com" }]
dependencies = ["flet>=0.82.2"]

[dependency-groups]
dev = []

[tool.flet.app]
path = "src"

[tool.flet]
org = "com.dualcare"
product = "dualcare"
company = "DualCare"
copyright = "Copyright (C) 2024-2026 DualCare"
